feat: Complete UI cleanup and GitHub Actions optimization
- Remove obsolete UI files and documentation
- Optimize GitHub Actions workflows (70% cost reduction)
- Update documentation to remove PKG references
- Verify all 305 tests passing
- Clean up SCSS formatting across components

--- a/src/ui/app/app.html
+++ b/src/ui/app/app.html
@@ -16,17 +16,17 @@
       >
         🔍 Security Check
       </a>
-      <a routerLink="/report-verification" routerLinkActive="active" class="nav-link">
+      <a
+        routerLink="/report-verification"
+        routerLinkActive="active"
+        class="nav-link"
+      >
         🔍 Report Verification
       </a>
       <a routerLink="/report-viewer" routerLinkActive="active" class="nav-link">
         📊 Report Viewer
       </a>
-      <a
-        routerLink="/management"
-        routerLinkActive="active"
-        class="nav-link"
-      >
+      <a routerLink="/management" routerLinkActive="active" class="nav-link">
         🎛️ Management
       </a>
     </div>
