feat: Add clean security icons and update favicon references
- Created simple security icons with white circuit pattern and green shield
- Added security-icon.svg (512x512), favicon.svg (32x32), app-icon-256.svg (256x256)
- Updated package.json Electron Builder config to use new security icons
- Updated src/ui/index.html favicon references to use new SVG favicon
- Updated Electron main.js to use security icon for all platforms
- Updated copilot workflow to use Node.js 24 (latest LTS)
- Replaced complex EAI branding with clean, professional security-focused design
- Icons feature: white background, subtle circuit pattern, green security shield with checkmark

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Ui</title>
+    <title>EAI Security Check</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="EAI Security Check - Cross-platform security auditing tool for macOS, Linux, and Windows" />
+    <link rel="icon" type="image/svg+xml" href="icons/favicon.svg" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="apple-touch-icon" href="icons/security-icon.svg" />
   </head>
 
   <body>
